--- a/client/src/components/header/index.css
+++ b/client/src/components/header/index.css
@@ -33,13 +33,25 @@
   margin-left: 10px; /* Add spacing from Logout button */
 }
 
-.image img {
+.image-with-text {
+  display: flex;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-with-text img {
   display: block;
-  margin: 0 auto;
   background-color: transparent;
   width: 50px;
   height: 50px;
-  float: left;
+  justify-content: left;
+}
+
+.image-with-text div {
+  justify-content: center;
+  height: 20px;
+  float: right;
 }
 
 .view-profile-button:hover {
